# PaPie

./: .gitignore  CITATION.cff  Makefile  README.md  lightning_test.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
pie/: default_settings.json  tagger.py  trainer.py
pie/data/: dataset.py
pie/models/: base_model.py  decoder.py  embedding.py  model.py
pie/scripts/: group.py  tag.py  train.py
scripts/: compare_inference.py  converter.py  get_pie_model_params.py
