[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PaPie"
version = "0.5.0"
description = "A Framework for Joint Learning of Sequence Labeling Tasks, forked from Pie"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Enrique Manjavacas" },
    { name = "Mike Kestemont" },
    { name = "Thibault Clerice" },
]
keywords = ["nlp", "lemmatization", "pos-tagging", "sequence-labeling"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Linguistic",
]
# dependencies are kept in requirements.txt (single source of truth)
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/lascivaroma/PaPie"
Repository = "https://github.com/lascivaroma/PaPie"

[project.scripts]
pie = "pie.scripts.group:pie_cli"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["pie*"]
exclude = ["test*", "tests*"]

[tool.setuptools.package-data]
pie = ["default_settings.json"]
